--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Drum Kit</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="css/stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
@@ -26,6 +26,6 @@
     </footer>
 </body>
 
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 
 </html>
